# slambook

ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
